--- a/my-reactapp/src/index.css
+++ b/my-reactapp/src/index.css
@@ -15,3 +15,20 @@ code {
 input{
   border: 1px solid gray
 }
+.FancyBorder {
+  padding: 10px 10px;
+  border: 10px solid;
+}
+
+.FancyBorder-blue {
+  border-color: blue;
+}
+
+.Dialog-title {
+  margin: 0;
+  font-family: sans-serif;
+}
+
+.Dialog-message {
+  font-size: larger;
+}
